added more media queries for tablet and mobile and now its fully responsive across all devices

--- a/index.html
+++ b/index.html
@@ -1,172 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Chef Portfolio</title>
-
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
     <link href="css/index.css" rel="stylesheet" />
     <script src="scripts.js" async></script>
     <script src="components/testimonials.js" async></script>
     <script src="components/features.js" async></script>
-    
-</head>
-
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <header>
-            <nav class="primary-nav">
-                <div class="logo">
-                    <img src="img/logo.jpg" alt="logo" />
-                </div>
-                <ul>
-                    <a class href="index.html">Home</a>
-                    <a class href="about.html">About</a>
-                    <a class="section-link" href="#">Testimonials</a>
-                    <a class href="contact.html">Contact</a>
-                    <a href="news.html">News</a>
-                    <li class="call-me"><a href="#"></a>Hire me!</li>
-                </ul>
-            </nav>
-            <div class="header-content">
-                <div class="main-image"><img src="img/chef.jpg" width="1000px" alt="master chef">
-                    <div class="buttons">
-                        <button>I am hungry</button>
-                        <button>Sign up</button>
-                    </div>
-                </div>
-
-                <h1>Say goodbye to cooking and cleaning.
-                    <br>Hello to super healthy meals at any time you can think of.
-                </h1>
-
+      <header>
+        <nav class="primary-nav">
+          <div class="logo">
+            <img src="img/logo.jpg" alt="logo" />
+          </div>
+          <ul>
+            <a class href="index.html">Home</a>
+            <a class href="about.html">About</a>
+            <a class="section-link" href="#">Testimonials</a>
+            <a class href="contact.html">Contact</a>
+            <a href="news.html">News</a>
+            <li class="call-me"><a href="#"></a>Hire me!</li>
+          </ul>
+        </nav>
+        <div class="header-content">
+          <div class="main-image">
+            <img src="img/chef.jpg" width="1000px" alt="master chef" />
+            <div class="buttons">
+              <button>I am hungry</button>
+              <button>Sign up</button>
             </div>
-        </header>
-        <!-- 
-        thinking about some intro about robotic kitchen, maybe some video or something, open for suggestions -->
-
-        <section class="home">
-            <div class="intro-to-features">
-                <h2>Get food fast &mdash; not fast food</h2>
-                <p>
-                    I know you're always busy. No time for cooking. So let me take care
-                    of that, I am really good at it, I promise!
-                </p>
-            </div>
-            <div class="features">
-                <div class="inside-of-features">
-                    <i class="fas fa-robot fa-5x"></i><br><br>
-                    <h3>Up to 365 days/year, 7 days/weak, 24 hours/day</h3>
-                    <p>
-                        Never cook again! I really mean that. I have created the world’s
-                        second robotic kitchen. Featuring an advanced, fully functional
-                        robot integrated into a beautifully designed, professional
-                        kitchen, it cooks with the skill and flair of a master chef”. It
-                        even “clears up after itself”
-                    </p>
-                </div>
-                <div class="inside-of-features">
-                    <i class="fas fa-clock fa-5x"></i><br><br>
-                    <h3>Ready in 3 minutes</h3>
-                    <p>
-                        You're only 3 minutes away from your delicious and super healthy
-                        meals delivered right to your home.
-                    </p>
-                </div>
-                <div class="inside-of-features">
-                    <i class="fas fa-carrot fa-5x"></i><br><br>
-                    <h3>100% organic</h3>
-                    <p>
-                        I have my own plantation,vegetables are fresh, organic and local.
-                        Animals are raised without added hormones or antibiotics. Good for
-                        your health, the environment, and it also tastes better!
-                    </p>
-                </div>
-                <div class="inside-of-features">
-                    <i class="fab fa-first-order fa-5x"></i><br><br>
-                    <h3>Order anything</h3>
-                    <p>
-                        I won't limit your creativity, which means you can order whatever
-                        you feel like. You can also choose from our menu containing over
-                        1000 delicious meals. Only limit is your imagination!
-                    </p>
-                </div>
-            </div>
-        </section>
-        <section class="drum-kit">
-            <!-- I have an idea to build drums, using basic js, here in this section,
-            there will like 7 drums and when you click on each on of them it will make
-            sound like real drum, so you can basically play around your melody,
-            its very cool.
-
-            Something for customers play around while their food arrives in 5 min -->
-
-        </section>
-        <div class="intro-to-testimonials">
-            <h3>My customers can't live without me</h3>
+          </div>
+          <h1>
+            Say goodbye to cooking and cleaning. <br />Hello to super healthy
+            meals at any time you can think of.
+          </h1>
         </div>
-
-        <section class="testimonials">
-            <div class="inside-of-testimonials">
-                <blockquote>
-                    Master Chef is just awesome! I just launched a startup which
-                    leaves me with no time for cooking because I work basically
-                    20 hours a day and sleep like 4 hours, so Master Cheff is a
-                    life-saver. Now that I got used to it, I couldn't live without my
-                    daily meals!
-                </blockquote>
-                <img class="customers-photos" src="img/Tesla2.jpg" width="170" height="150" alt="Nikola Tesla" />
-                <cite>Nikola Tesla</cite>
-            </div>
-            <div class="inside-of-testimonials">
-                <blockquote>
-                    Inexpensive, healthy and great-tasting meals, delivered right to
-                    my home. We have lots of food delivery here in Lisbon, but no one
-                    comes even close to master cheff. Me and my family are so in love!
-                </blockquote>
-                <img class="customers-photos" src="img/arwen.jpg" width="140px" alt="Customer 2 photo" />
-                <cite>Lady Arwen</cite>
-            </div>
-            <div class="inside-of-testimonials">
-                <blockquote>I was looking for a quick and easy food in Zihuatanejo. I tried a
-                    lot of them and ended up ordering only from Master Cheff and his
-                    robotic kitchen. Best food in both west and east coast. Keep up
-                    the great work!
-                </blockquote>
-                <img class="customers-photos" src="img/chaplin.jpg" width="160px" alt="Customer 3 photo" />
-                <cite>Charlie Chaplin</cite>
-            </div>
-        </section>
-        <footer>
-            <div class="row-footer">
-                <div class="row-inside-of-footer">
-                    <ul class="footer-nav">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Press</a></li>
-                        <li><a href="#">iOS App</a></li>
-                        <li><a href="#">Android App</a></li>
-                    </ul>
-                </div>
-                <div class="row-inside-of-footer">
-                    <ul class="social-links">
-                        <li><a href="#"><i class="fab fa-facebook-square fa-3x"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter-square fa-3x"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-square fa-3x"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram fa-3x"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
-        <div class="copyright">
-            <small>
-                Copyright &copy; 2019 by Master Chef. All rights reserved.
-            </small>
+      </header>
+      <section class="home">
+        <div class="intro-to-features">
+          <h2>Get food fast &mdash; not fast food</h2>
+          <p>
+            I know you're always busy. No time for cooking. So let me take care
+            of that, I am really good at it, I promise!
+          </p>
         </div>
+        <div class="features">
+          <div class="inside-of-features">
+            <i class="fas fa-robot fa-5x"></i><br /><br />
+            <h3>Up to 365 days/year, 7 days/weak, 24 hours/day</h3>
+            <p>
+              Never cook again! I really mean that. I have created the world’s
+              second robotic kitchen. Featuring an advanced, fully functional
+              robot integrated into a beautifully designed, professional
+              kitchen, it cooks with the skill and flair of a master chef”. It
+              even “clears up after itself”
+            </p>
+          </div>
+          <div class="inside-of-features">
+            <i class="fas fa-clock fa-5x"></i><br /><br />
+            <h3>Ready in 3 minutes</h3>
+            <p>
+              You're only 3 minutes away from your delicious and super healthy
+              meals delivered right to your home.
+            </p>
+          </div>
+          <div class="inside-of-features">
+            <i class="fas fa-carrot fa-5x"></i><br /><br />
+            <h3>100% organic</h3>
+            <p>
+              I have my own plantation,vegetables are fresh, organic and local.
+              Animals are raised without added hormones or antibiotics. Good for
+              your health, the environment, and it also tastes better!
+            </p>
+          </div>
+          <div class="inside-of-features">
+            <i class="fab fa-first-order fa-5x"></i><br /><br />
+            <h3>Order anything</h3>
+            <p>
+              I won't limit your creativity, which means you can order whatever
+              you feel like. You can also choose from our menu containing over
+              1000 delicious meals. Only limit is your imagination!
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="drum-kit"></section>
+      <div class="intro-to-testimonials">
+        <h3>My customers can't live without me</h3>
+      </div>
+      <section class="testimonials">
+        <div class="inside-of-testimonials">
+          <blockquote>
+            Master Chef is just awesome! I just launched a startup which leaves
+            me with no time for cooking because I work basically 20 hours a day
+            and sleep like 4 hours, so Master Cheff is a life-saver. Now that I
+            got used to it, I couldn't live without my daily meals!
+          </blockquote>
+          <img
+            class="customers-photos"
+            src="img/Tesla2.jpg"
+            width="170"
+            height="150"
+            alt="Nikola Tesla"
+          />
+          <cite>Nikola Tesla</cite>
+        </div>
+        <div class="inside-of-testimonials">
+          <blockquote>
+            Inexpensive, healthy and great-tasting meals, delivered right to my
+            home. We have lots of food delivery here in Lisbon, but no one comes
+            even close to master cheff. Me and my family are so in love!
+          </blockquote>
+          <img
+            class="customers-photos"
+            src="img/arwen.jpg"
+            width="140px"
+            alt="Customer 2 photo"
+          />
+          <cite>Lady Arwen</cite>
+        </div>
+        <div class="inside-of-testimonials">
+          <blockquote>
+            I was looking for a quick and easy food in Zihuatanejo. I tried a
+            lot of them and ended up ordering only from Master Cheff and his
+            robotic kitchen. Best food in both west and east coast. Keep up the
+            great work!
+          </blockquote>
+          <img
+            class="customers-photos"
+            src="img/chaplin.jpg"
+            width="160px"
+            alt="Customer 3 photo"
+          />
+          <cite>Charlie Chaplin</cite>
+        </div>
+      </section>
+      <footer>
+        <div class="row-footer">
+          <div class="row-inside-of-footer">
+            <ul class="footer-nav">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">iOS App</a></li>
+              <li><a href="#">Android App</a></li>
+            </ul>
+          </div>
+          <div class="row-inside-of-footer">
+            <ul class="social-links">
+              <li>
+                <a href="#"><i class="fab fa-facebook-square fa-3x"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter-square fa-3x"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-google-plus-square fa-3x"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram fa-3x"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+      <div class="copyright">
+        <small>
+          Copyright &copy; 2019 by Master Chef. All rights reserved.
+        </small>
+      </div>
     </div>
-</body>
+  </body>
 </html>
